<resources>
    <string name="app_name">Tip time</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_what_the_service">How what the service?</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="okey_15">Okey (15%)</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount: %s</string>
</resources>